[package]
name = "chalk_rs"
version = "0.1.0"
edition = "2024"
authors = ["dorian redmond <doriancerutti@gmail.com>"]
description = "a simple chalk.js port to rust"
license = "MIT"
repository = "https://github.com/dcerutti1/Chalk-rs"
keywords = ["text","terminal","color","chalk"]
readme = "README.md"

[dependencies]
